--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.39",
     "gsap": "^3.12.5",
     "three": "^0.161.0"
   }
